syntax = "proto3";

package user;
option go_package = "userservice/internal/generated/user_v1;user_v1";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
}

message GetProfileRequest {}

message GetProfileResponse {
  string account_id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string phone = 4;
  optional string avatar_url = 5;
  optional string bio = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message UpdateProfileRequest {
  optional string first_name = 1;
  optional string last_name = 2;
  optional string phone = 3;
  optional string avatar_url = 4;
  optional string bio = 5;
}

message UpdateProfileResponse {
  bool success = 1;
}
